--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -13,20 +13,19 @@
 .card-title {
   font-size: 1.125rem;
   font-weight: 600;
-  line-height: 1.25;
+  margin: 0 0 0.5rem 0;
 }
 
 .card-description {
   font-size: 0.875rem;
   color: #64748b;
+  margin: 0;
 }
 
 .card-content {
-  padding: 1.5rem;
-  padding-top: 0;
+  padding: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .card-footer {
-  padding: 1.5rem;
-  padding-top: 0;
+  padding: 0 1.5rem 1.5rem 1.5rem;
 }
